--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,30 +5,37 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:name=".CarpooliApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="false"
         android:screenOrientation="portrait"
+        android:supportsRtl="false"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="c9c1c7ea7875e8fdd27f76fc4a196bd9ab2fa991" />
 
-        <activity
-            android:name=".ui.splashscreen.SplashScreen">
+        <activity android:name=".ui.splashscreen.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.init.InitAppActivity"/>
-        <activity android:name=".ui.signup.SignUpActivity"/>
-
+        <activity android:name=".ui.init.InitAppActivity" />
+        <activity android:name=".ui.signup.SignUpActivity" />
+        <activity
+            android:name=".ui.signin.SignInActivity"
+            android:label="@string/title_activity_sign_in" />
+        <activity android:name=".ui.home.HomeActivity"></activity>
     </application>
 
 </manifest>
