--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.1.2'
 
     compile 'com.android.volley:volley:1.0.0'
+
+    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
